# bbg

./: .gitignore  LICENSE  docker-compose.yaml
bbg-net-web-api/: bbg-net-web-api.slnx
bbg-net-web-api/bbg-net-web-api/: Program.cs  WeatherForecast.cs  bbg-net-web-api.csproj  bbg-net-web-api.http
bbg-net-web-api/bbg-net-web-api/Controllers/: PublisherController.cs  WeatherForecastController.cs
bbg-net-web-api/bbg-net-web-api/Models/: OrderEvent.cs
bbg-net-web-api/bbg-net-web-api/Properties/: launchSettings.json
bbg-net-web-api/bbg-net-web-api/Services/: KafkaProducerService.cs
bbg.consumer.go/: go.mod  main.go
bbg.consumer.kotlin/: build.gradle.kts  gradle.properties
bbg.consumer.rust/: Cargo.toml
bbg.consumer.rust/bbg-consumer-rust/: Cargo.toml
bbg.consumer.rust/src/: main.rs
bbg.consumer.rust/src/consumer/: mod.rs  order_consumer.rs
bbg.consumer.rust/src/events/: mod.rs  order_event.rs
bbg.consumer.zig/: build.zig  build.zig.zon
bbg.consumer.zig/src/: main.zig  root.zig
bbg.consumer.zig/src/consumer/: order_consumer.zig
bbg.consumer.zig/src/events/: order_event.zig
bbg.producer.net/: Bbg.Producer.Net.slnx
bbg.producer.net/Bbg.Producer.Web.Api/: Bbg.Producer.Web.Api.csproj  Program.cs
bbg.producer.net/Bbg.Producer.Web.Api/Controllers/: PublisherController.cs
bbg.producer.rust/: Cargo.toml
bbg.producer.rust/https/: apps.http
bbg.producer.rust/src/: main.rs
bbg.producer.zig/: build.zig  build.zig.zon
bbg.producer.zig/https/: apps.http
bbg.producer.zig/src/: main.zig  root.zig
kotlin/: build.gradle  settings.gradle
(+20 files in other folders)
