[package]
name = "bbg_consumer_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
rskafka = "0.6.0"
tokio = { version = "1", features = ["full", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive", "env"] }
