[package]
name = "bbg-producer-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
# Framework Web
axum = "0.7"
# Runtime Async
tokio = { version = "1.0", features = ["full"] }
# Kafka Client (Pure Rust)
rskafka = { version = "0.6.0", features = ["full"] }
chrono = "0.4"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"